Filtros de productos y subcategorias funcionando. A falta de agregar búsqueda en el panel de categorias y reorganizar el código

--- a/src/view/panel/panel.html
+++ b/src/view/panel/panel.html
@@ -116,7 +116,7 @@
                 </select>
 
                 <select class="form-select" id="products-stock-filter" style="min-width:140px">
-                  <option value="" selected>Stock</option>
+                  <option value="">Stock</option>
                   <option value="in">Con stock</option>
                   <option value="out">Sin stock</option>
                   <option value="low">Bajo stock</option>
