--- a/src/view/login/login.html
+++ b/src/view/login/login.html
@@ -49,7 +49,7 @@
               type="email"
               class="form-control form-control-lg"
               placeholder="tu@correo.com"
-              value="laura"
+              value="laura@musiclab.com"
               required
             />
           </div>
