--- a/src/view/panel/panel.html
+++ b/src/view/panel/panel.html
@@ -16,14 +16,15 @@
     <aside class="sidebar">
       <div class="brand">
         <div class="brand-mark" aria-hidden="true">
-          <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
+          <img src="./../img/MusicLab.png" alt="Icono" width="38" height="38">
+          <!--<svg width="22" height="22" viewBox="0 0 24 24" fill="none">
             <path d="M12 2l8 4.5v11L12 22 4 17.5v-11L12 2z" stroke="currentColor" stroke-width="1.7"/>
             <path d="M12 2v20" stroke="currentColor" stroke-width="1.7" opacity="0.5"/>
             <path d="M4 6.5l8 4.5 8-4.5" stroke="currentColor" stroke-width="1.7" opacity="0.5"/>
-          </svg>
+          </svg>-->
         </div>
         <div>
-          <div class="brand-title">Tu App</div>
+          <div class="brand-title">MusicLab</div>
           <div class="brand-subtitle">Panel de administración</div>
         </div>
       </div>
@@ -70,9 +71,11 @@
           <p class="subtitle">Administra productos, categorías y subcategorías</p>
         </div>
 
-        <div class="d-flex align-items-center gap-2 flex-wrap">
-          <span class="badge-soft">Usuario: admin@local</span>
-          <span class="badge-soft">Rol: ADMIN</span>
+        <div class="d-flex align-items-center flex-wrap" style="gap: 10px;">
+          <span id="userEmail" class="badge-soft"></span>
+          <span id="userRole" class="badge-soft"></span>
+          <!--<span class="badge-soft">Usuario: admin@local</span>
+          <span class="badge-soft">Rol: ADMIN</span>-->
         </div>
       </header>
 
